--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenLocal()
+        maven { url 'https://maven.google.com' }
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
+        mavenLocal()
+        maven { url 'https://maven.google.com' }
         jcenter()
     }
 }
