Добавлены / поправлены конфигурации.

--- a/app/src/main/assets/config.json
+++ b/app/src/main/assets/config.json
@@ -24,13 +24,23 @@
       "temperature": 18
     },
     {
+      "text": "День 8:00 - 21:00, 3 мин через 10 без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
+    },
+    {
       "text": "День 8:00 - 21:00, 3 мин через 10 с вытяжкой",
       "fan1":
       {
         "durationOn": 3,
         "durationOff": 10
       },
-      "fan3":
+      "fan2":
       {
         "durationOn": 3,
         "durationOff": 10
@@ -38,6 +48,21 @@
       "beginTime": "8:00",
       "endTime": "21:00",
       "temperature": 18
+    },
+    {
+      "text": "День 8:00 - 21:00, 3 мин через 10 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan2":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
     },
     {
       "text": "День 8:00 - 21:00, 3 мин через 20",
@@ -51,13 +76,23 @@
       "temperature": 18
     },
     {
+      "text": "День 8:00 - 21:00, 3 мин через 20 без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 20
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
+    },
+    {
       "text": "День 8:00 - 21:00, 3 мин через 20 с вытяжкой",
       "fan1":
       {
         "durationOn": 3,
         "durationOff": 20
       },
-      "fan3":
+      "fan2":
       {
         "durationOn": 3,
         "durationOff": 20
@@ -65,6 +100,21 @@
       "beginTime": "8:00",
       "endTime": "21:00",
       "temperature": 18
+    },
+    {
+      "text": "День 8:00 - 21:00, 3 мин через 20 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 20
+      },
+      "fan2":
+      {
+        "durationOn": 3,
+        "durationOff": 20
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
     },
     {
       "text": "Ночь 21:00 - 8:00, 3 мин через 10",
@@ -78,6 +128,47 @@
       "temperature": 18
     },
     {
+      "text": "Ночь 21:00 - 8:00, 3 мин через 10 без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 3 мин через 10 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan2":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
+      "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 3 мин через 10 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan2":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
+    },
+    {
       "text": "Ночь 21:00 - 8:00, 4 мин через 20",
       "fan1":
       {
@@ -87,6 +178,37 @@
       "beginTime": "21:00",
       "endTime": "8:00",
       "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 20 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "fan2":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
+      "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 20 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "fan2":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
     },
     {
       "text": "Ночь 21:00 - 8:00, 4 мин через 30",
@@ -100,13 +222,35 @@
       "temperature": 18
     },
     {
-      "text": "Приток 5 мин",
+      "text": "Ночь 21:00 - 8:00, 4 мин через 30 с вытяжкой",
       "fan1":
       {
-        "durationOn": 5
+        "durationOn": 4,
+        "durationOff": 30
       },
-      "entire": 5,
+      "fan2":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
       "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 30 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "fan2":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
     },
     {
       "text": "Приток 10 мин, 2 через 2",
@@ -117,6 +261,35 @@
       },
       "entire": 10,
       "temperature": 18
+    },
+    {
+      "text": "Приток 10 мин, 2 через 2 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan2":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 10,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 10 мин, 2 через 2 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan2":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 10
     },
     {
       "text": "Приток 20 мин, 2 через 2",
@@ -135,7 +308,7 @@
         "durationOn": 2,
         "durationOff": 2
       },
-      "fan3":
+      "fan2":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -144,8 +317,148 @@
       "temperature": 18
     },
     {
+      "text": "Приток 20 мин, 2 через 2 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan2":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 20
+    },
+    {
+      "text": "Приток 30 мин, 2 через 2",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 30 мин, 2 через 2 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan2":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 30 мин, 2 через 2 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan2":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 30
+    },
+    {
+      "text": "Приток 30 мин, 5 через 5",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 30 мин, 5 через 5 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan2":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 30 мин, 5 через 5 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan2":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 30
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5 с вытяжкой",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan2":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5 с вытяжкой без подогрева",
+      "fan1":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan2":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60
+    },
+    {
+      "text": "Приток 5 мин",
+      "fan1":
+      {
+        "durationOn": 5
+      },
+      "entire": 5,
+      "temperature": 18
+    },
+    {
       "text": "Вытяжка 5 мин",
-      "fan3":
+      "fan2":
       {
         "durationOn": 5
       },
@@ -157,7 +470,7 @@
   [
     {
       "text": "День 8:00 - 21:00, 2 мин через 5",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 5
@@ -168,7 +481,7 @@
     },
     {
       "text": "День 8:00 - 21:00, 3 мин через 10",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 10
@@ -178,8 +491,18 @@
       "temperature": 18
     },
     {
+      "text": "День 8:00 - 21:00, 3 мин через 10 без подогрева",
+      "fan3":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
+    },
+    {
       "text": "День 8:00 - 21:00, 3 мин через 10 с вытяжкой",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 10
@@ -194,8 +517,23 @@
       "temperature": 18
     },
     {
+      "text": "День 8:00 - 21:00, 3 мин через 10 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan4":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
+    },
+    {
       "text": "День 8:00 - 21:00, 3 мин через 20",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 20
@@ -205,8 +543,18 @@
       "temperature": 18
     },
     {
+      "text": "День 8:00 - 21:00, 3 мин через 20 без подогрева",
+      "fan3":
+      {
+        "durationOn": 3,
+        "durationOff": 20
+      },
+      "beginTime": "8:00",
+      "endTime": "21:00"
+    },
+    {
       "text": "День 8:00 - 21:00, 3 мин через 20 с вытяжкой",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 20
@@ -222,7 +570,7 @@
     },
     {
       "text": "День 8:00 - 21:00, 3 мин через 20 с вытяжкой без подогрева",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 20
@@ -233,12 +581,11 @@
         "durationOff": 20
       },
       "beginTime": "8:00",
-      "endTime": "21:00",
-      "temperature": 18
+      "endTime": "21:00"
     },
     {
       "text": "Ночь 21:00 - 8:00, 3 мин через 10",
-      "fan2":
+      "fan3":
       {
         "durationOn": 3,
         "durationOff": 10
@@ -248,8 +595,65 @@
       "temperature": 18
     },
     {
+      "text": "Ночь 21:00 - 8:00, 3 мин через 10 с вытяжкой",
+      "fan3":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan4":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
+      "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 3 мин через 10 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "fan4":
+      {
+        "durationOn": 3,
+        "durationOff": 10
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
+    },
+    {
       "text": "Ночь 21:00 - 8:00, 4 мин через 20",
-      "fan2":
+      "fan3":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
+      "temperature": 18
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 20 без подогрева",
+      "fan3":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
+    },
+    {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 20 с вытяжкой",
+      "fan3":
+      {
+        "durationOn": 4,
+        "durationOff": 20
+      },
+      "fan4":
       {
         "durationOn": 4,
         "durationOff": 20
@@ -260,7 +664,7 @@
     },
     {
       "text": "Ночь 21:00 - 8:00, 4 мин через 20 с вытяжкой без подогрева",
-      "fan2":
+      "fan3":
       {
         "durationOn": 4,
         "durationOff": 20
@@ -275,7 +679,7 @@
     },
     {
       "text": "Ночь 21:00 - 8:00, 4 мин через 30",
-      "fan2":
+      "fan3":
       {
         "durationOn": 4,
         "durationOff": 30
@@ -285,17 +689,39 @@
       "temperature": 18
     },
     {
-      "text": "Приток 5 мин",
-      "fan2":
+      "text": "Ночь 21:00 - 8:00, 4 мин через 30 с вытяжкой",
+      "fan3":
       {
-        "durationOn": 5
+        "durationOn": 4,
+        "durationOff": 30
       },
-      "entire": 5,
+      "fan4":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00",
       "temperature": 18
     },
     {
+      "text": "Ночь 21:00 - 8:00, 4 мин через 30 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "fan4":
+      {
+        "durationOn": 4,
+        "durationOff": 30
+      },
+      "beginTime": "21:00",
+      "endTime": "8:00"
+    },
+    {
       "text": "Приток 10 мин, 2 через 2",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -304,8 +730,37 @@
       "temperature": 18
     },
     {
+      "text": "Приток 10 мин, 2 через 2 с вытяжкой",
+      "fan3":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan4":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 10,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 10 мин, 2 через 2 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan4":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 10
+    },
+    {
       "text": "Приток 20 мин, 2 через 2",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -315,7 +770,7 @@
     },
     {
       "text": "Приток 20 мин, 2 через 2 с вытяжкой",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -329,8 +784,32 @@
       "temperature": 18
     },
     {
+      "text": "Приток 20 мин, 2 через 2 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "fan4":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 20
+    },
+    {
+      "text": "Приток 30 мин, 2 через 2",
+      "fan3":
+      {
+        "durationOn": 2,
+        "durationOff": 2
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
       "text": "Приток 30 мин, 2 через 2 с вытяжкой",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -345,7 +824,7 @@
     },
     {
       "text": "Приток 30 мин, 2 через 2 с вытяжкой без подогрева",
-      "fan2":
+      "fan3":
       {
         "durationOn": 2,
         "durationOff": 2
@@ -358,8 +837,33 @@
       "entire": 30
     },
     {
+      "text": "Приток 30 мин, 5 через 5",
+      "fan3":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 30 мин, 5 через 5 с вытяжкой",
+      "fan3":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan4":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 30,
+      "temperature": 18
+    },
+    {
       "text": "Приток 30 мин, 5 через 5 с вытяжкой без подогрева",
-      "fan2":
+      "fan3":
       {
         "durationOn": 5,
         "durationOff": 5
@@ -370,6 +874,54 @@
         "durationOff": 5
       },
       "entire": 30
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5",
+      "fan3":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5 с вытяжкой",
+      "fan3":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan4":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60,
+      "temperature": 18
+    },
+    {
+      "text": "Приток 1 час, 5 мин через 5 с вытяжкой без подогрева",
+      "fan3":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "fan4":
+      {
+        "durationOn": 5,
+        "durationOff": 5
+      },
+      "entire": 60
+    },
+    {
+      "text": "Приток 5 мин",
+      "fan3":
+      {
+        "durationOn": 5
+      },
+      "entire": 5,
+      "temperature": 18
     },
     {
       "text": "Вытяжка 5 мин",
